/* 
  Localizable.strings
  Cat List

  Created by Javier Susa on 12/02/21.
  
*/

"title_app" = "Catbreeds";

//CardView
"card_view_more" = "More...";

//SearchBarView
"search_bar_view_placeholder_input_search" = "Search ...";
"search_bar_view_cancel_button" = "Cancel";

//DetailView
"detail_view_title_description" = "DESCRIPTION";
"detail_view_title_country" = "COUNTRY";
"detail_view_title_intelligence" = "INTELLIGENCE";
"detail_view_title_adaptability" = "ADAPTABILITY";
"detail_view_title_life_span" = "LIFE SPAN";
