...
            }
        }.navigationBarTitle(cat.name!, displayMode: .inline)
        .navigationBarBackButtonHidden(true)
        .navigationBarItems(leading: Button(action: {
            self.presentationMode.wrappedValue.dismiss()
        }, label: {
            Image(systemName: "chevron.backward")
                .font(.body)
                .foregroundColor(.black)
        }))
    }
}

...
